[gd_scene load_steps=7 format=3 uid="uid://cuk327yhulrkj"]

[ext_resource type="Script" uid="uid://cgxefmqvjorq6" path="res://website/listing.gd" id="1_n7ked"]
[ext_resource type="Texture2D" uid="uid://bcinmtm7p8i6h" path="res://movies/covers/000.png" id="2_n7ked"]
[ext_resource type="Texture2D" uid="uid://bocxi7u3fryxa" path="res://movies/assets/genre_outline.png" id="2_wn40t"]
[ext_resource type="Texture2D" uid="uid://dbhf302tcdtjx" path="res://movies/assets/thumbs_up.png" id="3_n7ked"]
[ext_resource type="Texture2D" uid="uid://dvgpngaunwnys" path="res://movies/assets/thumbs_down.png" id="4_pg2s5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7l300"]

[node name="Listing" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -187.0
offset_right = 187.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/separation = 32
alignment = 1
script = ExtResource("1_n7ked")

[node name="RewindButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "REWIND >>"

[node name="Movie" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Poster" type="TextureRect" parent="Movie"]
layout_mode = 2
texture = ExtResource("2_n7ked")

[node name="Details" type="VBoxContainer" parent="Movie"]
custom_minimum_size = Vector2(148, 0)
layout_mode = 2
alignment = 1

[node name="Title" type="Label" parent="Movie/Details"]
layout_mode = 2
text = "TBD"

[node name="Genre" type="PanelContainer" parent="Movie/Details"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_7l300")

[node name="Border" type="NinePatchRect" parent="Movie/Details/Genre"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
texture = ExtResource("2_wn40t")
draw_center = false
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="MarginContainer" type="MarginContainer" parent="Movie/Details/Genre"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 1
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 1

[node name="Label" type="Label" parent="Movie/Details/Genre/MarginContainer"]
modulate = Color(1, 0, 0, 1)
layout_mode = 2
text = "HORROR"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Status" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
alignment = 1

[node name="State" type="Label" parent="Status"]
modulate = Color(0.9490196, 0, 0.37254903, 1)
layout_mode = 2
text = "â—‰ UNSTOCKED"
vertical_alignment = 1

[node name="Location" type="Label" parent="Status"]
layout_mode = 2
text = "REWIND-DESK"

[node name="ReviewCounts" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
alignment = 1

[node name="Reviews" type="Label" parent="ReviewCounts"]
layout_mode = 2
text = "REVIEWS"

[node name="Counts" type="HBoxContainer" parent="ReviewCounts"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Positive" type="HBoxContainer" parent="ReviewCounts/Counts"]
layout_mode = 2

[node name="ThumbsUp" type="TextureRect" parent="ReviewCounts/Counts/Positive"]
layout_mode = 2
texture = ExtResource("3_n7ked")

[node name="Count" type="Label" parent="ReviewCounts/Counts/Positive"]
modulate = Color(0.5568628, 1, 0.68235296, 1)
layout_mode = 2
text = "0"

[node name="Negative" type="HBoxContainer" parent="ReviewCounts/Counts"]
layout_mode = 2

[node name="ThumbsDown" type="TextureRect" parent="ReviewCounts/Counts/Negative"]
layout_mode = 2
texture = ExtResource("4_pg2s5")

[node name="Count" type="Label" parent="ReviewCounts/Counts/Negative"]
modulate = Color(0.84313726, 0.1882353, 0.26666668, 1)
layout_mode = 2
text = "0"

[node name="Reviews" type="ScrollContainer" parent="."]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2

[node name="List" type="VBoxContainer" parent="Reviews"]
custom_minimum_size = Vector2(480, 64)
layout_mode = 2
theme_override_constants/separation = 6
alignment = 1

[connection signal="pressed" from="RewindButton" to="." method="_on_rewind_button_pressed"]
